<resources>
    <string name="app_name">Beers</string>
    <string name="title_beer_detail">Beer Detail</string>
    <string name="api_call">API Call</string>
    <string name="click_on_the_button">Click on the button</string>
    <string name="no_connection_available">No network connection available.</string>
    <string name="needs_get_accounts_permission">This app needs to access your Google account (via Contacts).</string>
    <string name="needs_google_play_services">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
    <string name="no_api_results">No results returned.</string>
    <string name="data_retrieved">Data retrieved using the Google Sheets API and the account %s</string>
    <string name="error_header">The following error occurred: %s</string>
    <string name="request_cancelled">Request cancelled.</string>
    <string name="beer_name">Name</string>
    <string name="beer_date">Date</string>
    <string name="beer_made_in">Made in</string>
    <string name="beer_type">Type</string>
    <string name="beer_comment">Comment</string>
    <string name="beer_more_info">More info</string>
    <string name="beer_photo_url">Photo URL</string>
    <string name="beer_photo">Photo</string>
    <string name="no_date_available">Date field is empty</string>
    <string name="no_made_in_available">Made in field is empty</string>
    <string name="no_type_available">Type field is empty</string>
    <string name="no_comment_available">Comment field is empty</string>
    <string name="no_more_info_available">More info field is empty</string>
    <string name="no_photo_available">Photo field is empty</string>
    <string name="write_your_comment">Write here your new comment</string>
    <string name="comment_ok">Your comment has been send succesfully</string>
</resources>
